@@ -20,6 +20,7 @@ git-annex (5.20140614) UNRELEASED; urgency=medium
     branch, eg after git-annex add has run on 2 million files in one go.
   * assistant: Fix bug, introduced in last release, that caused the assistant
     to make many unncessary empty merge commits.
+  * Support building with bloomfilter 2.0.0.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 16 Jun 2014 11:28:42 -0400
 
